sync ratings
